feat: redesign api to kep it simple
